# thrifty

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt
doc/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  thrifty_pch.h
src/components/: CMakeLists.txt  ZeroDynamics.cpp  ZeroDynamics.h
src/entities/: Acceleration.h  CMakeLists.txt  EntityController.cpp  EntityController.h  IDynamics.h  IEntity.h  IRunnable.h  Position.h  SixDoF.h  Velocity.h  ZeroDynamics.cpp  ZeroDynamics.h  entities_pch.h
src/interfaces/: IRunnable.h
src/modules/: IModule.h
src/units/: Units.h
test/: CMakeLists.txt  EntityControllerTest.cpp  PositionTest.cpp  SixDoFTest.cpp  UnitsTest.cpp  alloc_dbg.cpp
